[package]
name = "rust-graphQl-markdown-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15"

actix-web = "4"
actix-web-lab = "0.10"
actix-cors = "0.6"

mongodb = "2.1.0"
futures = "0.3"
bson = { version = "2.0.0", features= ["chrono-0_4"]}


serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.9"
log = "0.4"

chrono = { version = "^0.4.13", features= ["serde"] }
nanoid = "0.4.0"

config = "0.13"
lazy_static = "1.4"