[package]
name = "rust-graphql-markdown-server"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
package-name = "my-awesome-android-app"
assets = "config"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.10"

actix-web = "4"
actix-web-lab = "0.10"
actix-cors = "0.6"
actix-session = { version = "0.7.1", features = ["cookie-session", "redis-actor-session"] }
mongodb = "2.1.0"
futures = "0.3"
bson = { version = "2.0.0", features= ["chrono-0_4"]}


serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.9"
log = "0.4"

chrono = { version = "^0.4.13", features= ["serde"] }
nanoid = "0.4.0"

config = "0.13"
lazy_static = "1.4"
once_cell = "1.10"
tokio = { version = "1.17.0", features = ["macros"] }
